_sass/components/_nav.scss
/* ... */
/* Minimal Navigation Dropdown (shared between mobile and desktop) */
.nds-main-nav .nds-nav-minimal .nds-dropdown-menu {
    position: fixed !important;
    inset-inline: 0;
    z-index: var(--_nav-z-dropdown);
    max-height: 40svh;
    overflow-y: clip;

    .nds-dropdown-content {
        margin-inline: 0;
    }
}

/* Small Mobile Screens */
@include mobile {
    .nds-topbar .nds-topbar-info:not(.nds-digitalStamp-tab)> :not(.nds-theme-toggle-wrap) {
        display: none;
    }


    .nds-dropdown-menu .nds-dropdown-columns.columnView {
        column-count: 1;
        width: 100%;
    }

    .nds-multi-column-list {
        column-count: 1;
    }
}

/* Respect reduced motion preferences */
@include reduced-motion {

    .nds-main-nav .nds-dropdown-menu,
    .nds-main-nav .nds-collapse,
    .nds-main-nav .nds-nav-primary .showMore i {
        transition: none !important;
    }
}

